--- a/app/views/advisories/create.html.erb
+++ b/app/views/advisories/create.html.erb
@@ -1,5 +1,5 @@
 <div id="rubysec">
-  <%= render :partial => "header" %> 
+  <%= render :partial => "shared/header" %> 
   <section>
     <div class="col-sm-6 col-sm-offset-3">
       <h1>Awesome! Thanks for your help.</h1>
