--- a/app/views/advisories/new.html.erb
+++ b/app/views/advisories/new.html.erb
@@ -1,5 +1,5 @@
 <div id="rubysec">
-  <%= render :partial => "shared/header" %> 
+  <%= render :partial => "shared/header" %>
 
   <section>
 
@@ -9,12 +9,12 @@
     </div>
 
     <div class="new-vuln">
-      <h2>Report a new vulnerability</h2>
-      <p>Hey! Thanks for taking the time to do this. Your submission helps the community. All submissions to this website are ultimately vetted on the <a href="https://github.com/rubysec/ruby-advisory-db">GitHub repository</a>.</p>
-      <h4>Reporting a vulnerability is a simple process.</h4>
+      <h2>Report a new leak</h2>
+      <p>Hey! Thanks for taking the time to do this. Your submission helps the community. All submissions to this website are ultimately vetted on the <a href="https://github.com/rubymem/ruby-mem-advisory-db">GitHub repository</a>.</p>
+      <h4>Reporting a leak is a simple process.</h4>
       <ol>
         <li>
-          Discreetly disclose the flaw to the gem maintainer(s).
+          If it is a vulnerability, discreetly disclose the flaw to the gem maintainer(s).
           <br/>
           Please be polite! Open source maintainers are usually unpaid volunteers, and everyone deserves a little courtesy.
         </li>
@@ -23,6 +23,6 @@
       </ol>
       <br/>
     </div>
-    
+
   </section>
 </div>
