--- a/app/views/home/atom.xml.erb
+++ b/app/views/home/atom.xml.erb
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <feed xmlns="http://www.w3.org/2005/Atom">
 
-  <title><![CDATA[RubySec]]></title>
-  <link href="https://rubysec.com/atom.xml" rel="self"/>
-  <link href="https://rubysec.com/"/>
+  <title><![CDATA[RubyMem]]></title>
+  <link href="https://rubymem.com/atom.xml" rel="self"/>
+  <link href="https://rubymem.com/"/>
   <updated><%= @updated_at %></updated>
-  <id>https://rubysec.com</id>
+  <id>https://rubymem.com</id>
   <author>
-    <name><![CDATA[RubySec]]></name>
-    <email><![CDATA[info@rubysec.com]]></email>
+    <name><![CDATA[RubyMem]]></name>
+    <email><![CDATA[info@rubymem.com]]></email>
   </author>
   <generator uri="http://octopress.org/">Octopress</generator>
 
