Replace ocurrences of RubysecAdvisory with RubymemAdvisory

--- a/app/views/advisories/new.html.erb
+++ b/app/views/advisories/new.html.erb
@@ -5,7 +5,7 @@
 
     <div class="new-vuln">
       <h3>Advisory form</h3>
-      <%= render :partial => "form", :locals => { :presenter => AdvisoryPresenter.new(RubysecAdvisory.new) } %>
+      <%= render :partial => "form", :locals => { :presenter => AdvisoryPresenter.new(RubymemAdvisory.new) } %>
     </div>
 
     <div class="new-vuln">
