--- a/app/views/advisories/create.html.erb
+++ b/app/views/advisories/create.html.erb
@@ -1,4 +1,4 @@
-<div id="rubysec">
+<div id="rubymem">
   <%= render :partial => "shared/header" %> 
   <section>
     <div class="col-sm-6 col-sm-offset-3">
